# Engram-SDK

./: .gitignore  CLAUDE.md  Cargo.toml  Engram-Build-Document.md  README.md
.github/workflows/: ci.yml
crates/engram-capture/: Cargo.toml
crates/engram-capture/src/: error.rs  lib.rs
crates/engram-capture/src/import/: aider.rs  claude_code.rs  detect.rs  mod.rs
crates/engram-capture/src/pty/: detector.rs  mod.rs  wrapper.rs
crates/engram-capture/src/session/: builder.rs  extractor.rs  mod.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-cli/src/commands/: blame.rs  diff.rs  fetch.rs  gc.rs  graph.rs  hook_handler.rs  import.rs  init.rs  log.rs  mcp.rs  mod.rs  pr_summary.rs  pull.rs  push.rs  record.rs  reindex.rs  review.rs  search.rs  show.rs  stats.rs  trace.rs  version.rs
crates/engram-cli/src/output/: format.rs  mod.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: error.rs  lib.rs
crates/engram-core/src/config/: mod.rs  settings.rs
crates/engram-core/src/hooks/: handlers.rs  installer.rs  mod.rs  session.rs
crates/engram-core/src/model/: engram.rs  intent.rs  lineage.rs  mod.rs  operations.rs  token_economics.rs  transcript.rs
crates/engram-core/src/storage/: git_backend.rs  mod.rs  objects.rs  read.rs  refs.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: lib.rs
crates/engram-protocol/: Cargo.toml
crates/engram-protocol/src/: error.rs  lib.rs  refspec.rs  sync.rs
crates/engram-query/: Cargo.toml
crates/engram-query/src/: diff.rs  error.rs  lib.rs  review.rs  search.rs  trace.rs
crates/engram-query/src/graph/: builder.rs  mod.rs  model.rs
crates/engram-query/src/index/: mod.rs  reader.rs  rebuild.rs  schema.rs  writer.rs
crates/engram-sdk/: Cargo.toml
crates/engram-sdk/src/: lib.rs  session.rs
sdks/python/: README.md  pyproject.toml
sdks/python/src/engram/: __init__.py  model.py  session.py  storage.py
sdks/python/tests/: conftest.py  test_model.py  test_session.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts  model.ts  session.ts  storage.ts
sdks/typescript/tests/: model.test.ts  session.test.ts
