[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-capture",
    "crates/engram-query",
    "crates/engram-protocol",
    "crates/engram-sdk",
    "crates/engram-mcp",
    "crates/engram-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
description = "Capture agent reasoning as Git-native versioned data"

[workspace.dependencies]
# Internal
engram-core = { path = "crates/engram-core" }
engram-capture = { path = "crates/engram-capture" }
engram-query = { path = "crates/engram-query" }
engram-protocol = { path = "crates/engram-protocol" }
engram-sdk = { path = "crates/engram-sdk" }
engram-mcp = { path = "crates/engram-mcp" }

# Git (vendored bundles libgit2 + openssl so no system deps needed)
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Capture
portable-pty = "0.9"
libc = "0.2"
sha2 = "0.10"
walkdir = "2"
ignore = "0.4"

# File locking
fs2 = "0.4"

# MCP
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"

# Search
tantivy = "0.22"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
