[package]
name = "engram-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Session capture for Engram - PTY wrapper, importers, session builder"

[dependencies]
engram-core = { workspace = true }
portable-pty = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
git2 = { workspace = true }

[lints]
workspace = true
