[package]
name = "engram-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Engram - capture agent reasoning in Git"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
engram-core = { workspace = true }
engram-capture = { workspace = true }
engram-query = { workspace = true }
engram-protocol = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
