[package]
name = "engram-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Query and search for Engram - Tantivy index, file tracing, context graph"

[dependencies]
engram-core = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
git2 = { workspace = true }

[lints]
workspace = true
