[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Python SDK for Engram - capture agent reasoning as Git-native versioned data"
readme = "README.md"
license = "Apache-2.0 OR MIT"
requires-python = ">=3.9"
dependencies = [
    "pygit2>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
